# Nexus

./: Groq.com  README.md  bashrc  lang.py  main.py  nexus_ui_tools.py  param_generators.py  pyproject.toml  refractor.sh  requirements.txt  roadmap.txt
.github/workflows/: compilar.yml
assets/: ia_assistant.html  nexus_pc.html  openscad_engine.html  pbr_studio.html  upload_ui.html
core/: constants.py  state.py  stl_utils.py  system_utils.py
fastlane/metadata/android/es-ES/: full_description.txt  short_description.txt  title.txt
nexus_proyectos/: f.stl  nanorocket_base.stl  nanorocket_cap.stl  nanorocket_cone.stl  nanorocket_head.stl  openscad_engine.html.bak
server/: http_server.py
ui/: components.py  main_ui.py
ui/tabs/: ai_tab.py  assembly_tab.py  constructor_tab.py  editor_tab.py  files_tab.py  pbr_tab.py  viewer_tab.py
