[project]
name = "nexus-cad"
version = "1.0.0"
description = "NEXUS CAD - Diseño 3D offline"
requires-python = ">=3.9"
dependencies = [
    "flet",
    "flet-webview"
]

[tool.flet]
module-name = "main"
assets-dir = "assets"

[tool.flet.android]
min_sdk_version = 24
target_sdk_version = 35

# PERMISO VITAL PARA EL MICRO-SERVIDOR
[tool.flet.android.permission]
"android.permission.INTERNET" = true

# LA LLAVE MAESTRA QUE SOLUCIONA EL ERROR ERR_CLEARTEXT_NOT_PERMITTED
[tool.flet.android.manifest_application]
usesCleartextTraffic = true
